Closed Bug 603728 Opened 15 years ago Closed 15 years ago

widget/src/gtk2/nsWindow.cpp:3123: warning: unused variable 'domVirtualKeyCode'

Categories

(Core :: Widget: Gtk, defect)

All
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b7

People

(Reporter: dholbert, Assigned: masayuki)

References

Details

(Whiteboard: [build_warning])

Attachments

(1 file)

> mozilla/widget/src/gtk2/nsWindow.cpp: In member function 'PRBool nsWindow::DispatchKeyDownEvent(GdkEventKey*, PRBool*)': > mozilla/widget/src/gtk2/nsWindow.cpp:3123: warning: unused variable 'domVirtualKeyCode' Here's the flagged line: >3123 PRUint32 domVirtualKeyCode = GdkKeyCodeToDOMKeyCode(aEvent->keyval); Looks like that line (including the function call) can just be removed... masayuki, is there any reason we need that?
Yes, we can remove it!
Assignee: nobody → masayuki
Blocks: 597981
No longer blocks: 520732
Attached patch Patch v1.0Splinter Review
Attachment #482768 - Flags: review?(karlt)
Attachment #482768 - Flags: review?(karlt) → review+
Comment on attachment 482768 [details] [diff] [review] Patch v1.0 no risk. fix a nit.
Attachment #482768 - Flags: approval2.0?
Attachment #482768 - Flags: approval2.0? → approval2.0+
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
Target Milestone: mozilla2.0b8 → mozilla2.0b7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: