Bug 603728 remove an unused variable which wasn't removed by bug 597981 r=karlt, a=joe